Make the title a min-height to fix nav fade overlap

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9928,6 +9928,10 @@ a:hover,
   width: 100%;
 }
 
+.title-container {
+  min-height: 400px;
+}
+
 #nav-bar {
   position: fixed;
   top: 0;
