--- a/resources/sass/blog.scss
+++ b/resources/sass/blog.scss
@@ -19,3 +19,8 @@
     }
     // Restrict images
 }
+
+.title-container {
+    min-height: 400px;
+}
+// Fix for title being clipped into nav fade
